2002-12-22  Bruno Haible  <bruno@clisp.org>

	* utime.c (utime_null): No need to call ftruncate if the file was
	nonempty.

2002-12-23  Bruno Haible  <bruno@clisp.org>

	* memcoll.c (STRCOLL): New macro.
	(memcoll): Use it.

2002-12-22  Bruno Haible  <bruno@clisp.org>

	* getstr.h (getstr): Define, to avoid clash with libcurses.
	* linebuffer.h (readline): Define, to avoid clash with libreadline.

2002-12-22  Bruno Haible  <bruno@clisp.org>

	* getdate.y (get_date): Test HAVE_STRUCT_TM_TM_ZONE, not HAVE_TM_ZONE.

2002-12-23  Bruno Haible  <bruno@clisp.org>

	* getline.h: Include <stddef.h>, for size_t.

	* unicodeio.h: Include <stddef.h>, for size_t.
	* unicodeio.c: Don't include <stddef.h>.

2002-12-17  Bruno Haible  <bruno@clisp.org>

	* canon-host.c (strdup): Remove unused declaration.

	* fsusage.c: Include full_read.h.
	(get_fs_usage): Use full_read instead of safe_read.

	* utime.c (utime_null): Use SAFE_READ_ERROR.

2002-12-11  Bruno Haible  <bruno@clisp.org>

	* setenv.h: Rewritten to cope with systems that have setenv() but not
	unsetenv().
	* setenv.c, unsetenv.c: Taken from glibc-2.2.4 with the following
	modifications:

	2002-12-11  Bruno Haible  <bruno@clisp.org>

		* setenv.c (alloca): Fall back to malloc.
		(freea): New macro.
		(setenv): Use freea() to free memory allocated with alloca().

	2002-11-13  Bruno Haible  <bruno@clisp.org>

		* setenv.c (compar_fn_t, __add_to_environ, setenv): Use ANSI C
		function declarations.
		* unsetenv.c (unsetenv): Likewise.

	2002-03-04  Bruno Haible  <bruno@clisp.org>

		Portability to AIX 4.3.3.
		* unsetenv.c: New file, extracted from setenv.c.
		* setenv.c: Move the unsetenv() function to unsetenv.c.

	2001-12-20  Bruno Haible  <bruno@clisp.org>

		* setenv.c (__add_to_environ): Don't call realloc(NULL,...),
		use malloc instead. For SunOS4.

	2001-12-11  Bruno Haible  <bruno@clisp.org>

		* setenv.c: Declare alloca.
		(compar_fn_t): New typedef.
		(KNOWN_VALUE, STORE_VALUE): Use it.
